# ToDoList-API

./: .coverage  .env  .gitignore  README.md  admin.py  coverage.xml  main.py  private.pem  public.pem  pyproject.toml  test.db
.github/workflows/: test.yml
admin/: admin.py
api/: auth.py  tasks.py  views.py
core/: config.py  security.py
db/: database.py
db/models/: enums.py  task.py  user.py
db/schemas/: task.py  token.py  user.py
repositories/: task_repository.py  user_repository.py
static/: styles.css
templates/: base.html  login.html  register.html  tasks.html
tests/: conftest.py  test_auth.py  test_tasks.py  test_tokens.py
