[tool.poetry]
name = "todolistapi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.coverage.run]
omit = [
    "*/api/views.py",           # Исключаем весь файл views.py
    "*/templates/*",        # Исключаем шаблоны
    "*/static/*",           # Исключаем статические файлы
    "*/migrations/*",       # Исключаем миграции
    "*/tests/*",            # Исключаем сами тесты
]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = {version=">=0.35.0,<0.36.0", extras=["standard"]}
sqlalchemy = ">=2.0.43,<3.0.0"
pydantic = {version=">=2.11.7,<3.0.0", extras=["email"]}
aiosqlite = ">=0.21.0,<0.22.0"
pyjwt = {version=">=2.10.1,<3.0.0", extras=["crypto"]}
pydantic-settings = ">=2.10.1,<3.0.0"
bcrypt = ">=4.3.0,<5.0.0"
python-multipart = ">=0.0.20,<0.0.21"
sqladmin = ">=0.21.0,<0.22.0"
jinja2 = ">=3.1.6,<4.0.0"
httpx = ">=0.28.1,<0.29.0"
itsdangerous = ">=2.2.0,<3.0.0"
pytest = "^8.4.2"
pytest-asyncio = "^1.2.0"
pytest-cov = "^7.0.0"
black = "^25.9.0"
coverage = "^7.10.7"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
